--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,7 +122,16 @@
   body {
     @apply bg-background text-foreground;
   }
-  button {
-    @apply cursor-pointer;
+  button,
+  [data-slot='combobox-item'],
+  [data-slot='command-item'],
+  [data-slot='context-menu-item'],
+  [data-slot='context-menu-checkbox-item'],
+  [data-slot='context-menu-radio-item'],
+  [data-slot='dropdown-menu-item'],
+  [data-slot='dropdown-menu-checkbox-item'],
+  [data-slot='dropdown-menu-radio-item'],
+  [data-slot='select-item'] {
+    @apply cursor-pointer!;
   }
 }
